--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install python3.7 python3-pip
   - sudo apt-get install git-crypt
-  - git-crypt unlock travis-key
+  - git-crypt unlock travis.key
   - sudo pip3 install setuptools
   - sudo -H pip3 install docker-compose-wait --ignore-installed PyYAML
   - sudo cp ./config/dotenvs/CI/.env .env
